force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/smagicinteract__URL_Shortening_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to configure URL shortening for the org.</description>
    <label>URL Shortening Configuration</label>
</CustomObject>