force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Custom_Provider__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Custom_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, class name provided in &apos;Provider Class Name&apos; would be used for URL Shortening. Leave unchecked to use out of the box URL Shortening functionality.</inlineHelpText>
    <label>Use Custom Code</label>
    <type>Checkbox</type>
</CustomField>