force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Default_Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Default_Custom_Domain__c</fullName>
    <inlineHelpText>The custom URL domain provisioned for short links.</inlineHelpText>
    <label>Default Custom Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>