force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Default_Expiry_For_Interactive__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Default_Expiry_For_Interactive__c</fullName>
    <inlineHelpText>Expiry in days that is applicable for short links created for interactive messages by default.</inlineHelpText>
    <label>Expiry (days) For Interactive Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>