force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Default_Workspace_ID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Default_Workspace_ID__c</fullName>
    <inlineHelpText>Do Not Change.</inlineHelpText>
    <label>Workspace ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>