force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Excluded_Custom_Domains__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Excluded_Custom_Domains__c</fullName>
    <inlineHelpText>Custom URL domains of destination URL that should not be shortened.</inlineHelpText>
    <label>Excluded Custom Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>