force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Is_URL_Shortening_Available__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_URL_Shortening_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, URL shortening would be enabled provided the user has relevant license and permissions. Uncheck to stop users from shortening URL.</inlineHelpText>
    <label>Is URL Shortening Enabled</label>
    <type>Checkbox</type>
</CustomField>