force-app/main/default/objects/smagicinteract__URL_Shortening_Configuration__c/fields/smagicinteract__Provider_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Provider_Class_Name__c</fullName>
    <description>Stores the class name for custom providers.</description>
    <inlineHelpText>Name of the class with custom code for URL shortening. This is used only if &apos;Use Custom Code&apos; is checked.</inlineHelpText>
    <label>Provider Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>